[package]
name = "worthless-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
wasi-common = "3.0.1"
wasmtime = "3.0.0"
wasmtime-wasi = "3.0.0"
