[package]
name = "worthless-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug"]
debug = []

[dependencies]
ciborium = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_plain = "1.0.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
